# react-native-skia-video

./: .clang-format  .gitignore  CONTRIBUTING.md  LICENSE  README.md  azzapp-react-native-skia-video.podspec  eslint.config.mjs  lefthook.yml  mypatch.patch  package.json  sheunglaili-react-native-skia-video.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/cpp/: JEventBridge.cpp  JEventBridge.h  JNIHelpers.cpp  JNIHelpers.h  JSIJNIConversion.cpp  JSIJNIConversion.h  NativeEventDispatcher.cpp  NativeEventDispatcher.h  RNSkiaHelpers.cpp  RNSkiaHelpers.h  SkiaContextHolder.cpp  SkiaContextHolder.h  VideoCapabilities.cpp  VideoCapabilities.h  VideoComposition.cpp  VideoComposition.h  VideoCompositionEncoderHostObject.cpp  VideoCompositionEncoderHostObject.h  VideoCompositionExporter.cpp  VideoCompositionExporter.h  VideoCompositionFramesExtractor.cpp  VideoCompositionFramesExtractor.h  VideoCompositionFramesExtractorHostObject.cpp  VideoCompositionFramesExtractorHostObject.h  VideoCompositionFramesExtractorSyncHostObject.cpp  VideoCompositionFramesExtractorSyncHostObject.h  VideoCompositionFramesSyncExtractorHostObject.cpp  VideoCompositionFramesSyncExtractorHostObject.h  VideoEncoderHostObject.cpp  VideoEncoderHostObject.h  VideoFrame.cpp  VideoFrame.h  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerHostObject.cpp  VideoPlayerHostObject.h  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/azzapp/reactnativeskiavideo/: ReactNativeSkiaVideoModule.java  ReactNativeSkiaVideoPackage.java
android/src/main/java/com/azzapp/rnskv/: EGLResourcesHolder.java  EGLUtils.java  GLFrameExtractor.java  ImageReaderHelpers.java  JNIHelpers.java  NativeEventDispatcher.java  RNSkiaHelpers.java  ReactNativeSkiaVideoModule.java  ReactNativeSkiaVideoPackage.java  ReactNativeSkiaVideoSpec.java  TextureRenderer.java  TimeHelpers.java  VideoCapabilities.java  VideoComposition.java  VideoCompositionDecoder.java  VideoCompositionExporter.java  VideoCompositionFramesExtractor.java  VideoCompositionFramesExtractorSync.java  VideoCompositionItemDecoder.java  VideoEncoder.java  VideoFrame.java  VideoOutputDownScaler.java  VideoPlayer.java
android/src/newarch/: ReactNativeSkiaVideoSpec.java
android/src/oldarch/: ReactNativeSkiaVideoSpec.java
cpp/: EventEmitter.cpp  EventEmitter.h  azzapp-react-native-skia-video.cpp  azzapp-react-native-skia-video.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/reactnativeskiavideoexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/ReactNativeSkiaVideoExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeSkiaVideoExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeSkiaVideoExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeSkiaVideoExample.xcscheme
example/ios/ReactNativeSkiaVideoExample.xcworkspace/: contents.xcworkspacedata
example/ios/ReactNativeSkiaVideoExampleTests/: ReactNativeSkiaVideoExampleTests.m
example/src/: App.tsx  VideoCompositionExample.tsx  VideoPlayerExample.tsx
example/src/helpers/: pexelsClient.ts
ios/: AVAssetTrackUtils.h  JSIUtils.h  MTLTextureUtils.h  MTLTextureUtils.mm  RNSVVideoPlayer.h  RNSVVideoPlayer.mm  ReactNativeSkiaVideo.h  ReactNativeSkiaVideo.mm  VideoComposition.h  VideoCompositionEncoderHostObject.h  VideoCompositionEncoderHostObject.mm  VideoCompositionExporter.h  VideoCompositionExporter.mm  VideoCompositionFramesExtractorHostObject.h  VideoCompositionFramesExtractorHostObject.mm  VideoCompositionFramesExtractorSyncHostObject.h  VideoCompositionFramesExtractorSyncHostObject.mm  VideoCompositionFramesSyncExtractorHostObject.h  VideoCompositionFramesSyncExtractorHostObject.mm  VideoCompositionItemDecoder.h  VideoCompositionItemDecoder.mm  VideoEncoderHostObject.h  VideoEncoderHostObject.mm  VideoFrame.h  VideoFrame.mm  VideoPlayerHostObject.h  VideoPlayerHostObject.mm
scripts/: clang-format.sh
src/: NativeReactNativeSkiaVideo.ts  RNSkiaVideoModule.ts  exportVideoComposition.ts  index.tsx  types.ts  videoCompositionPlayer.ts  videoPlayer.ts
src/utils/: thread.ts  useEventListener.ts
